added support for Markdown in @fileOverview description

--- a/source/docs.html.mustache.erb
+++ b/source/docs.html.mustache.erb
@@ -17,7 +17,9 @@
     <main>
         <header>
             <h1>{{name}}</h1>
-            <p>{{description}}</p>
+            <div class="description">
+                {{{description}}}
+            </div>
         </header>
 
         <div class="columns">
