--- a/source/stylesheets/docs.scss
+++ b/source/stylesheets/docs.scss
@@ -12,6 +12,14 @@ header {
   }
 }
 
+#spec-failures {
+  @extend .alert, .alert-danger;
+
+  &:empty {
+    display: none;
+  }
+}
+
 .columns {
   @extend .row;
 
