--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -64,7 +64,7 @@
           lineNumbers: true
         });
 
-        makeGetRequest('/example.js', function(content) {
+        makeGetRequest('/example2.js', function(content) {
           editor.setValue(content);
         });
 
