--- a/source/stylesheets/docs.scss
+++ b/source/stylesheets/docs.scss
@@ -33,7 +33,55 @@ nav {
 }
 
 table {
-  @extend .table;
-  @extend .table-striped;
-  @extend .table-hover;
+  @extend .table, .table-striped, .table-hover;
+}
+
+.examples {
+  table {
+    th, td {
+      width: 40%;
+
+      &:last-child {
+        width: 20%;
+      }
+    }
+  }
+}
+
+.perf {
+  position: relative;
+
+  button {
+    @extend .btn, .btn-primary;
+  }
+
+  table {
+    display: none;
+
+    th, td {
+      &:last-child {
+        text-align: right;
+      }
+    }
+  }
+
+  &.loading {
+    &:after {
+      display: block;
+      content: "";
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background: #fff url("/images/gears.gif") no-repeat center;
+      opacity: 0.5;
+    }
+  }
+
+  &.loading, &.loaded {
+    table {
+      display: table;
+    }
+  }
 }
