added support for Markdown in descriptions

--- a/docs.html.mustache
+++ b/docs.html.mustache
@@ -32,7 +32,8 @@
                 {{#docs}}
                 <section>
                     <h1 id="{{name}}">{{name}}</h1>
-                    <p>{{description}}</p>
+
+                    {{{description}}}
 
                     {{#hasExamples}}
                     <h2>Specs</h2>
