--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,11 +4,11 @@
 <head>
     <title>Breakneck</title>
 
-    <link rel="stylesheet" type="text/css" href="lib/codemirror/lib/codemirror.css" />
-    <link rel="stylesheet" type="text/css" href="lib/codemirror/theme/solarized.css" />
-    <script type="text/javascript" src="lib/codemirror/lib/codemirror.js"></script>
-    <script type="text/javascript" src="lib/codemirror/mode/javascript/javascript.js"></script>
-    <script type="text/javascript" src="common.js"></script>
+    <%= stylesheet_link_tag "/lib/codemirror/lib/codemirror" %>
+    <%= stylesheet_link_tag "/lib/codemirror/theme/solarized" %>
+    <%= javascript_include_tag "/lib/codemirror/lib/codemirror" %>
+    <%= javascript_include_tag "/lib/codemirror/mode/javascript/javascript" %>
+    <%= javascript_include_tag "common" %>
 
     <style type="text/css">
       #left {
@@ -64,7 +64,7 @@
           lineNumbers: true
         });
 
-        makeGetRequest('example.js', function(content) {
+        makeGetRequest('/example.js', function(content) {
           editor.setValue(content);
         });
 
