added parsing of library name and description

--- a/docs.html.mustache
+++ b/docs.html.mustache
@@ -15,8 +15,8 @@
 <body>
     <div class="container">
         <div class="page-header jumbotron">
-            <h1 contenteditable="true">Library name</h1>
-            <p class="lead" contenteditable="true">Library Description</p>
+            <h1>{{name}}</h1>
+            <p class="lead">{{description}}</p>
         </div>
 
         <div class="row">
