--- a/source/docs.html.mustache.erb
+++ b/source/docs.html.mustache.erb
@@ -3,9 +3,10 @@
 
 <head>
     <title>{{title}}</title>
-    <link rel="stylesheet" type="text/css" href="lib/bootstrap/dist/css/bootstrap.css" />
-    <script type="text/javascript" src="lib/jasmine/lib/jasmine-core/jasmine.js"></script>
-    <script type="text/javascript" src="lib/lazy.js/lazy.js"></script>
+
+    <%= stylesheet_link_tag "docs" %>
+    <%= javascript_include_tag "/lib/jasmine/lib/jasmine-core/jasmine" %>
+    <%= javascript_include_tag "/lib/lazy.js/lazy" %>
 
     <script type="text/javascript">
       {{{code}}}
@@ -13,22 +14,24 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="page-header jumbotron">
+    <main>
+        <header>
             <h1>{{name}}</h1>
-            <p class="lead">{{description}}</p>
-        </div>
+            <p>{{description}}</p>
+        </header>
 
-        <div class="row">
-            <div class="col-lg-3">
-                <ul class="nav">
-                    {{#docs}}
-                    <li><a href="#{{name}}">{{name}}</a></li>
-                    {{/docs}}
-                </ul>
+        <div class="columns">
+            <div class="left-column">
+                <nav>
+                    <ul>
+                        {{#docs}}
+                        <li><a href="#{{name}}">{{name}}</a></li>
+                        {{/docs}}
+                    </ul>
+                </nav>
             </div>
 
-            <div class="col-lg-9">
+            <div class="right-column">
                 {{#docs}}
                 <section>
                     <h1 id="{{name}}">{{name}}</h1>
@@ -37,7 +40,7 @@
 
                     {{#hasExamples}}
                     <h2>Specs</h2>
-                    <table class="table table-striped table-hover">
+                    <table>
                         <thead>
                             <tr>
                                 <th>Input</th>
@@ -78,7 +81,7 @@
                 {{/docs}}
             </div>
         </div>
-    </div>
+    </main>
 
     <script type="text/javascript">
       var jasmineEnv = jasmine.getEnv();
