implemented a very silly way to share colors between CSS and JS
(and by JS I mean Highcharts)

--- a/source/docs.html.mustache.erb
+++ b/source/docs.html.mustache.erb
@@ -126,6 +126,14 @@
         </div>
     </main>
 
+    <div id="color-reference">
+        <div class="primary"></div>
+        <div class="success"></div>
+        <div class="info"></div>
+        <div class="warning"></div>
+        <div class="danger"></div>
+    </div>
+
     <script type="text/javascript">
       var jasmineEnv = jasmine.getEnv();
 
