--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,11 +4,8 @@
 <head>
     <title>Breakneck</title>
 
-    <%= stylesheet_link_tag "/lib/codemirror/lib/codemirror" %>
-    <%= stylesheet_link_tag "/lib/codemirror/theme/solarized" %>
-    <%= javascript_include_tag "/lib/codemirror/lib/codemirror" %>
-    <%= javascript_include_tag "/lib/codemirror/mode/javascript/javascript" %>
-    <%= javascript_include_tag "common" %>
+    <%= stylesheet_link_tag "index" %>
+    <%= javascript_include_tag "index" %>
 
     <style type="text/css">
       #left {
