--- a/source/output.html.erb
+++ b/source/output.html.erb
@@ -2,13 +2,8 @@
 <html>
 
 <head>
-    <%= stylesheet_link_tag "/lib/codemirror/lib/codemirror" %>
-    <%= stylesheet_link_tag "/lib/codemirror/theme/solarized" %>
-    <%= javascript_include_tag "/lib/codemirror/lib/codemirror" %>
-    <%= javascript_include_tag "/lib/codemirror/mode/javascript/javascript" %>
-    <%= javascript_include_tag "/lib/lazy.js/lazy" %>
-    <%= javascript_include_tag "/lib/mustache/mustache" %>
-    <%= javascript_include_tag "common" %>
+    <%= stylesheet_link_tag "output" %>
+    <%= javascript_include_tag "output" %>
 
     <style type="text/css">
       body {
