implemented a resizable splitter thing!

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -7,40 +7,6 @@
     <%= stylesheet_link_tag "index" %>
     <%= javascript_include_tag "index" %>
 
-    <style type="text/css">
-      #left {
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 50%;
-      }
-
-      #right {
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 50%;
-        right: 0;
-      }
-
-      .CodeMirror, iframe {
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        height: 100%;
-        width: 100%;
-
-        font-family: Consolas, Inconsolata, monospace;
-      }
-
-      iframe {
-        border: none;
-      }
-    </style>
-
     <script type="text/javascript">
       function debounce(delay, fn) {
         var timeout;
@@ -77,6 +43,8 @@
     <div id="left">
         <textarea></textarea>
     </div>
+
+    <div id="splitter" draggable="true"></div>
 
     <div id="right">
         <iframe src="output.html" />
