--- a/source/stylesheets/index.css
+++ b/source/stylesheets/index.css
@@ -2,3 +2,52 @@
  *= require lib/codemirror
  *= require lib/codemirror/theme/solarized
  */
+
+#left {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 50%;
+
+  margin-right: 2px;
+}
+
+#right {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  right: 0;
+
+  margin-left: 2px;
+}
+
+#splitter {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  width: 4px;
+
+  margin-left: -2px;
+
+  background-color: #bbb;
+  cursor: col-resize;
+}
+
+.CodeMirror, iframe {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+
+  font-family: Consolas, Inconsolata, monospace;
+}
+
+iframe {
+  border: none;
+}
