--- a/docs.html.mustache
+++ b/docs.html.mustache
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <a href="https://github.com/dtao/breakneck"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a>
+    <a href="https://github.com/dtao/breakneck" target="_top"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a>
 
     <main>
         <header>
