--- a/source/stylesheets/docs.scss
+++ b/source/stylesheets/docs.scss
@@ -22,6 +22,15 @@ header {
   &:empty {
     display: none;
   }
+
+  a {
+    float: right;
+    color: #ffb;
+
+    &:hover {
+      color: darken(#ffb, 10%);
+    }
+  }
 }
 
 .columns {
@@ -65,6 +74,18 @@ table {
 
       &:last-child {
         width: 20%;
+      }
+    }
+
+    tr {
+      td {
+        transition: color 0.5s;
+        transition: background-color 0.5s;
+      }
+
+      &.highlight td {
+        color: #000;
+        background-color: #ff8 !important;
       }
     }
   }
