relabeled 'Actual' column as 'Result'

--- a/source/docs.html.mustache.erb
+++ b/source/docs.html.mustache.erb
@@ -92,7 +92,7 @@
                                 <tr>
                                     <th>Input</th>
                                     <th>Expected</th>
-                                    <th>Actual</th>
+                                    <th>Result</th>
                                 </tr>
                             </thead>
 
