--- a/source/stylesheets/index.css
+++ b/source/stylesheets/index.css
@@ -23,6 +23,18 @@
   margin-left: 2px;
 }
 
+#right.loading:after {
+  display: block;
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: #fff url("/images/gears.gif") no-repeat center;
+  opacity: 0.5;
+}
+
 #splitter {
   position: absolute;
   top: 0;
