--- a/docs.html.mustache
+++ b/docs.html.mustache
@@ -92,7 +92,7 @@
                                 <tr>
                                     <th>Input</th>
                                     <th>Expected</th>
-                                    <th>Actual</th>
+                                    <th>Result</th>
                                 </tr>
                             </thead>
 
