--- a/resources/docs.html.mustache
+++ b/resources/docs.html.mustache
@@ -4,19 +4,21 @@
 <head>
     <title>{{title}}</title>
 
-    <%= stylesheet_link_tag "docs" %>
-    <%= javascript_include_tag "docs" %>
+    <link rel="stylesheet" type="text/css" href="docs.css" />
+    <script src="http://pivotal.github.io/jasmine/lib/jasmine-1.3.1/jasmine.js"></script>
+    <script src="http://lodash.com/_js/lodash.js"></script>
+    <script src="http://benchmarkjs.com/_js/benchmark.js"></script>
+    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+    <script src="http://code.highcharts.com/highcharts.js"></script>
+    <script src="http://danieltao.com/HighTables/hightables.js"></script>
+    <script type="text/javascript" src="docs.js"></script>
 
     <script type="text/javascript">
-      {{{code}}}
-
       var benchmarks = {};
     </script>
 </head>
 
 <body>
-    <a href="https://github.com/dtao/breakneck" target="_top"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a>
-
     <main>
         <header>
             <h1>{{name}}</h1>
@@ -32,7 +34,7 @@
                 <nav>
                     <ul>
                         {{#docs}}
-                        <li><a href="#{{name}}">{{name}}</a></li>
+                        <li><a href="#{{identifier}}">{{shortName}}</a></li>
                         {{/docs}}
                     </ul>
                 </nav>
@@ -40,8 +42,11 @@
 
             <div class="right-column">
                 {{#docs}}
-                <section id="{{name}}">
-                    <h1>{{name}}</h1>
+                <section id="{{identifier}}">
+                    <h1>
+                        {{shortName}}
+                        <small>{{name}}</small>
+                    </h1>
 
                     {{{description}}}
 
@@ -65,7 +70,7 @@
                                 <tr>
                                     <td>{{name}}</td>
                                     <td>{{type}}</td>
-                                    <td>{{description}}</td>
+                                    <td>{{{description}}}</td>
                                 </tr>
                                 {{/params}}
 
@@ -76,7 +81,7 @@
                                 <tr>
                                     <td>returns</td>
                                     <td>{{type}}</td>
-                                    <td>{{description}}</td>
+                                    <td>{{{description}}}</td>
                                 </tr>
                                 {{/returns}}
                             </tfoot>
@@ -97,13 +102,13 @@
                             </thead>
 
                             <tbody>
-                                {{#examples}}
+                                {{#examples.examples}}
                                 <tr id="example-{{id}}">
                                     <td>{{{input}}}</td>
                                     <td>{{{output}}}</td>
                                     <td></td>
                                 </tr>
-                                {{/examples}}
+                                {{/examples.examples}}
                             </tbody>
                         </table>
                     </div>
@@ -112,19 +117,19 @@
                     {{#hasBenchmarks}}
                     <div class="perf">
                         <h3>Benchmarks</h3>
-                        <table id="{{name}}-perf-tests">
+                        <table id="{{identifier}}-perf-tests">
                             <!-- Gah, HighTables is stupid... doesn't account for <thead> :( -->
                             <tr>
                                 <th>Implementation</th>
                                 <th>Ops/second</th>
                             </tr>
 
-                            {{#benchmarks}}
+                            {{#benchmarks.benchmarks}}
                             <tr id="perf-test-{{id}}">
                                 <td>{{{name}}}</td>
                                 <td></td>
                             </tr>
-                            {{/benchmarks}}
+                            {{/benchmarks.benchmarks}}
                         </table>
 
                         <button>Run performance benchmarks</button>
@@ -133,6 +138,10 @@
 
                     <script type="text/javascript">
                       describe('{{{name}}}', function() {
+                        {{#examples}}
+
+                        {{{setup}}}
+
                         {{#examples}}
                         (function() {
                           var spec = it('returns {{output}} for {{input}}', function() {
@@ -144,33 +153,36 @@
                           spec.input = '{{input}}';
                           spec.output = '{{output}}';
                         }());
+
+                        {{/examples}}
                         {{/examples}}
                       });
 
-                      benchmarks['{{name}}'] = [
+                      (function() {
                         {{#benchmarks}}
-                        new Benchmark('{{name}}', {
-                            id: {{id}},
-                            fn: function() {
-                                {{{impl}}};
-                            }
-                        }),
-                        {{/benchmarks}}
-                      ];
+
+                        {{{setup}}}
+
+                        benchmarks['{{identifier}}'] = [
+
+                          {{#benchmarks}}
+                          new Benchmark('{{name}}', {
+                              id: {{id}},
+                              fn: function() {
+                                  {{{impl}}};
+                              }
+                          }),
+
+                          {{/benchmarks}}
+                          {{/benchmarks}}
+                        ];
+                      }());
                     </script>
                 </section>
                 {{/docs}}
             </div>
         </div>
     </main>
-
-    <div id="color-reference">
-        <div class="primary"></div>
-        <div class="success"></div>
-        <div class="info"></div>
-        <div class="warning"></div>
-        <div class="danger"></div>
-    </div>
 </body>
 
 </html>
