--- a/resources/docs.html.mustache
+++ b/resources/docs.html.mustache
@@ -13,6 +13,10 @@
     <script src="http://danieltao.com/HighTables/hightables.js"></script>
     <script type="text/javascript" src="docs.js"></script>
 
+    {{#javascripts}}
+    <script type="text/javascript" src="{{{.}}}"></script>
+    {{/javascripts}}
+
     <script type="text/javascript">
       var benchmarks = {};
     </script>
