--- a/resources/docs.html.mustache
+++ b/resources/docs.html.mustache
@@ -4,6 +4,7 @@
 <head>
     <title>{{title}}</title>
 
+    <link rel="stylesheet" type="text/css" href="http://yandex.st/highlightjs/7.3/styles/default.min.css" />
     <link rel="stylesheet" type="text/css" href="docs.css" />
     <script src="http://pivotal.github.io/jasmine/lib/jasmine-1.3.1/jasmine.js"></script>
     <script src="http://lodash.com/_js/lodash.js"></script>
@@ -11,6 +12,7 @@
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script src="http://code.highcharts.com/highcharts.js"></script>
     <script src="http://danieltao.com/HighTables/hightables.js"></script>
+    <script src="http://yandex.st/highlightjs/7.3/highlight.min.js"></script>
     <script type="text/javascript" src="docs.js"></script>
 
     {{#javascripts}}
