name, not title

--- a/resources/docs.html.mustache
+++ b/resources/docs.html.mustache
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>{{title}}</title>
+    <title>{{name}}</title>
 
     <link rel="stylesheet" type="text/css" href="http://yandex.st/highlightjs/7.3/styles/default.min.css" />
     <link rel="stylesheet" type="text/css" href="docs.css" />
